# pro-verifier

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_profiles.json
scripts/: format.sh  lint.sh
src/: __init__.py  analyzer.py  cli.py  models.py  report_generator.py
src/fetchers/: __init__.py  base.py  github.py  instagram.py  linkedin.py  manager.py  twitter.py
